src/test/ui/rfc-2093-infer-outlives/nested-structs.stderr
error: rustc_outlives
  --> $DIR/nested-structs.rs:4:1
   |
LL | struct Foo<'a, T> {
   | ^^^^^^^^^^^^^^^^^
   |
   = note: T: 'a

error: aborting due to previous error

